--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myApp",
+  "name": "firebase",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -57,5 +57,14 @@
     "tslint": "~5.17.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/josephambe/kai_king.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/josephambe/kai_king/issues"
+  }
 }
