--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "angularfire2": "^5.2.1",
+    "await-timeout": "^0.6.0",
     "core-js": "^2.5.4",
     "firebase": "^6.3.0",
     "rxjs": "~6.5.1",
