--- a/package.json
+++ b/package.json
@@ -20,16 +20,25 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/camera": "^5.10.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/crop": "^5.10.0",
+    "@ionic-native/file-chooser": "^5.10.0",
+    "@ionic-native/image-picker": "^5.10.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "angularfire2": "^5.2.1",
     "await-timeout": "^0.6.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-crop": "^0.4.0",
+    "cordova-plugin-filechooser": "^1.2.0",
+    "cordova-plugin-telerik-imagepicker": "^2.3.3",
     "core-js": "^2.5.4",
     "firebase": "^6.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
+    "uploader": "0.0.3-3",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -67,5 +76,15 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/josephambe/kai_king/issues"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "photo uploader"
+      },
+      "cordova-plugin-crop": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-filechooser": {}
+    }
   }
 }
