--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/pwa-elements": "^1.3.0",
     "angularfire2": "^5.2.1",
     "await-timeout": "^0.6.0",
     "cordova-plugin-camera": "^4.1.0",
